# capston_autonomous

./: CMakeLists.txt  package.xml  setup.py
capstone/: __init__.py
capstone/CubicSpline/: __init__.py  stanley_control.py
capstone/CubicSpline/utils/: __init__.py
include/astar/: AStar.cpp
include/particle_filter/: helper_functions.h  particle_filter.cpp  particle_filter.h
launch/: turtle_control.launch.py  turtle_local.launch.py  turtle_planning.launch.py  turtle_plot.launch.py
map/: final_map.txt  final_map2.txt  final_map2_table.txt  final_map_table.txt  map.txt  map2.txt
scripts/: Center_Node.py  Map_1_Plot.py  Map_2_Plot.py  Map_3_Plot.py  Map_4_Plot.py  Map_Plot.py  Total_Plot.py  Turtle_1_Control.py  Turtle_2_Control.py  Turtle_3_Control.py  Turtle_4_Control.py  center_node.py  global_path_server.py
src/: Local_Planner_Server.cpp  Map_Server.cpp  Turtle_1_Localization.cpp  Turtle_1_Planning.cpp  Turtle_2_Localization.cpp  Turtle_2_Planning.cpp  Turtle_3_Localization.cpp  Turtle_3_Planning.cpp  Turtle_4_Localization.cpp  Turtle_4_Planning.cpp
